queenPath(),rookpath(),kingpath(),bishopPath(),knightpath() added to chess.js

--- a/index.html
+++ b/index.html
@@ -108,6 +108,18 @@
         </tr>
     </table>
     </div>
+    <div id="chooseRole" style="display: none;">
+        <h2>Chose new Role for the pawn!!</h2>
+        <input type="radio" id="role_r" name="role" value="r">
+        <label for="role_r">Rook</label><br>
+        <input type="radio" id="role_q" name="role" value="q">
+        <label for="role_q">Queen</label><br>  
+        <input type="radio" id="role_b" name="role" value="b">
+        <label for="role_b">Bishop</label><br><br>
+        <input type="radio" id="role_k" name="role" value="k">
+        <label for="role_k">Knight</label><br><br>
+        <button id="submit" onclick="">Change Role of Pawn"</button>
+    </div>
   <script src="chess.js"></script>
 </body>
 </html>
