FinalRoleChangeOfPawn() made imp changes and function is ready

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         <label for="role_b">Bishop</label><br><br>
         <input type="radio" id="role_k" name="role" value="k">
         <label for="role_k">Knight</label><br><br>
-        <button id="submit" onclick="">Change Role of Pawn"</button>
+        <button id="changeRoleBtn" >Change Role of Pawn"</button>
     </div>
   <script src="chess.js"></script>
 </body>
